--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     Carême räknas som en av det franska kökets mest ryktbara företrädare. Han var kökschef hos bland andra Napoleon I, Charles Maurice de Talleyrand, prinsen-regenten Georg IV av Storbritannien, kejsare Alexander I av Ryssland och James Mayer de Rothschild. Hans namn har övergått till slagord för att beteckna höjdpunkten av kokkonst, av honom utvecklad till vetenskap.</p>
                 
                 <h3>Tips och ursprung - marängen</h3>
-                <section>Recept på klassisk maräng kommer ursprungligen från Meiringen i Schweiz där alla sägs älska marängsviss med chokladsås. Enligt en seglivad historia skapades bakverket maräng av en medeltida italiensk kock som bodde i staden. Maränger kan bakas på olika sätt, beroende på hur man ska använda dem. Vill man att de ska bli sega inuti görs de av en sjuden smet, torra maränger vispas kallt.
+                <p>Recept på klassisk maräng kommer ursprungligen från Meiringen i Schweiz där alla sägs älska marängsviss med chokladsås. Enligt en seglivad historia skapades bakverket maräng av en medeltida italiensk kock som bodde i staden. Maränger kan bakas på olika sätt, beroende på hur man ska använda dem. Vill man att de ska bli sega inuti görs de av en sjuden smet, torra maränger vispas kallt.
 
                 – Det viktigaste är att ha rena kärl. Tvätta alltid ur bunken med två matskedar ättika och en tesked salt och skölj sedan med kallt vatten, säger den svenska konditorn Jan Hedh. Använd metallbunke, aldrig plastbunke.
 
@@ -43,7 +43,7 @@
                 Klicka eller spritsa ut maränger, i storlek som pingisbollar på plåt med bakplåtspapper. Grädda dem 1–1 ½ timme, beroende på storlek. Tills de känns lätta och släpper papperet. Låt dem svalna på galler.
 
                 Chokladmaränger får man genom att försiktigt vända ner 75 gram fint hackad mörk choklad i den vispade marängen. Klicka eller spritsa ut på plåt med bakplåtspapper.
-                
+            </p>
                     <h3>
                     Så här kan den se ut-->
                     </h3>
