--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <h3>
                     Så här kan den se ut-->
                     </h3>
-                    <img src="Fragilit%C3%A9.jpg" alt="Så här kan Fragilité se ut"/>
+                    <img src="Fragil%C3%A9OnTheRoll.img" alt="Så här kan Fragilité se ut"/>
         
         </article>
         <aside>
