--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     </head>
     <body>
         <header>
+            <h1>Bakning med chef Saka</h1>
         </header>
         <nav>
             <a href="index.html">Start</a>
-            <a href="information.html">Information</a>
             <a href="recept.html">Recept</a>
         </nav>
         <section>
