--- a/recept.html
+++ b/recept.html
@@ -4,8 +4,18 @@
         <meta charset=utf-8>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Fragilité</title>
+        <address>Daneil Saka, Ormängsgatan 61C, 165 56 Hässelby, tel.nr:0739161974, Email:danielsaka@hotmail.com</address>
     </head>
     <body>
+     
+    <body>
+        <header>
+            <h1>Bakning med chef Saka</h1>
+        </header>
+        <nav>
+            <a href="index.html">Start</a>
+            <a href="recept.html">Recept</a>
+        </nav>
         <div>
                     <ul type="square">
                         <h3>Detta behöver du!</h3>
