Marängen och dess brödtext

--- a/recept.html
+++ b/recept.html
@@ -6,7 +6,6 @@
         <title>Fragilité</title>
         <address>Daneil Saka, Ormängsgatan 61C, 165 56 Hässelby, tel.nr:0739161974, Email:danielsaka@hotmail.com</address>
     </head>
-    <body>
      
     <body>
         <header>
@@ -16,7 +15,7 @@
             <a href="index.html">Start</a>
             <a href="recept.html">Recept</a>
         </nav>
-        <div>
+        <article>
                     <ul type="square">
                         <h3>Detta behöver du!</h3>
                         <h4>Bottnar</h4>
@@ -51,7 +50,7 @@
                         <li>Toppa till sist me ätbara blommor eller som i mitt fall citronmeliss</li>
                         <p>Smaka å njut!</p>
                     </ol>
-        </div>
+        </article>
         <div>
             
         </div>
