--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
                     Carême räknas som en av det franska kökets mest ryktbara företrädare. Han var kökschef hos bland andra Napoleon I, Charles Maurice de Talleyrand, prinsen-regenten Georg IV av Storbritannien, kejsare Alexander I av Ryssland och James Mayer de Rothschild. Hans namn har övergått till slagord för att beteckna höjdpunkten av kokkonst, av honom utvecklad till vetenskap.</p>
                 
-                <h3>Tips och ursprung - marängen</h3>
+                <h3>Viktigt att veta när man gör maräng</h3>
                 <p>Recept på klassisk maräng kommer ursprungligen från Meiringen i Schweiz där alla sägs älska marängsviss med chokladsås. Enligt en seglivad historia skapades bakverket maräng av en medeltida italiensk kock som bodde i staden. Maränger kan bakas på olika sätt, beroende på hur man ska använda dem. Vill man att de ska bli sega inuti görs de av en sjuden smet, torra maränger vispas kallt.
 
                 – Det viktigaste är att ha rena kärl. Tvätta alltid ur bunken med två matskedar ättika och en tesked salt och skölj sedan med kallt vatten, säger den svenska konditorn Jan Hedh. Använd metallbunke, aldrig plastbunke.
