--- a/index.html
+++ b/index.html
@@ -3,55 +3,58 @@
     <head>
         <meta charset=utf-8>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="style.css">
         <title>Fragilité</title>
     </head>
     <body>
-        <header>
-            <h1>Bakning med chef Saka</h1>
-        </header>
-        <nav>
-            <a href="index.html">Start</a>
-            <a href="recept.html">Recept</a>
-        </nav>
-        <section>
-        
-        </section>    
-        <article>
-              <h3>Fragilité och dess ursprung</h3>
-                    <p>Marie-Antoine Carême, född 8 juni 1784 i Paris, död där 12 januari 1833, var en fransk kökskonstnär.
+        <main class="frame1">
+            <header class="fantasy">
+                <h1>Bakning med grande le chéf Careme</h1>
+            </header>
+            <nav>
+                <a href="index.html">Start</a>
+                <a href="recept.html">Recept</a>
+            </nav>
+            <section>
 
-                    Carême räknas som en av det franska kökets mest ryktbara företrädare. Han var kökschef hos bland andra Napoleon I, Charles Maurice de Talleyrand, prinsen-regenten Georg IV av Storbritannien, kejsare Alexander I av Ryssland och James Mayer de Rothschild. Hans namn har övergått till slagord för att beteckna höjdpunkten av kokkonst, av honom utvecklad till vetenskap.</p>
-                
-                <h3>Viktigt att veta när man gör maräng</h3>
-                <p>Recept på klassisk maräng kommer ursprungligen från Meiringen i Schweiz där alla sägs älska marängsviss med chokladsås. Enligt en seglivad historia skapades bakverket maräng av en medeltida italiensk kock som bodde i staden. Maränger kan bakas på olika sätt, beroende på hur man ska använda dem. Vill man att de ska bli sega inuti görs de av en sjuden smet, torra maränger vispas kallt.
+            </section>    
+            <article class="frame2">
+                  <h3>Fragilité och dess ursprung</h3>
+                        <p>Marie-Antoine Carême, född 8 juni 1784 i Paris, död där 12 januari 1833, var en fransk kökskonstnär.
 
-                – Det viktigaste är att ha rena kärl. Tvätta alltid ur bunken med två matskedar ättika och en tesked salt och skölj sedan med kallt vatten, säger den svenska konditorn Jan Hedh. Använd metallbunke, aldrig plastbunke.
+                        Carême räknas som en av det franska kökets mest ryktbara företrädare. Han var kökschef hos bland andra Napoleon I, Charles Maurice de Talleyrand, prinsen-regenten Georg IV av Storbritannien, kejsare Alexander I av Ryssland och James Mayer de Rothschild. Hans namn har övergått till slagord för att beteckna höjdpunkten av kokkonst, av honom utvecklad till vetenskap.</p>
 
-                Var noga med att separerar ägg­gulan från äggvitan så att inga så kallade guldfiskar blir kvar i äggvitan. Äggulan innehåller fett vilket dämpar skumbildningen. Bäst resultat får du om äggvitan har stått och luftat sig i kylen ett par dagar. Äggvitan går bra att frysa som den är, men håller sig i kylskåpet cirka en vecka. Ska du frysa in äggulan tillsätt lite socker och vispa den lätt innan du fryser in den.
+                    <h3>Viktigt att veta när man gör maräng</h3>
+                    <p>Recept på klassisk maräng kommer ursprungligen från Meiringen i Schweiz där alla sägs älska marängsviss med chokladsås. Enligt en seglivad historia skapades bakverket maräng av en medeltida italiensk kock som bodde i staden. Maränger kan bakas på olika sätt, beroende på hur man ska använda dem. Vill man att de ska bli sega inuti görs de av en sjuden smet, torra maränger vispas kallt.
 
-                Äggvitor kan vispas upp till närmare åtta gånger sin egen volym.
+                    – Det viktigaste är att ha rena kärl. Tvätta alltid ur bunken med två matskedar ättika och en tesked salt och skölj sedan med kallt vatten, säger den svenska konditorn Jan Hedh. Använd metallbunke, aldrig plastbunke.
 
-                Tillsats av syra som citronsaft, vinä­ger eller ättika påverkar pH-värdet och stärker äggvitan vid vispning. Tillsätt syran i början av vispningen. Om äggvitan är kall får den bättre volym än om den är rumstempererad.
+                    Var noga med att separerar ägg­gulan från äggvitan så att inga så kallade guldfiskar blir kvar i äggvitan. Äggulan innehåller fett vilket dämpar skumbildningen. Bäst resultat får du om äggvitan har stått och luftat sig i kylen ett par dagar. Äggvitan går bra att frysa som den är, men håller sig i kylskåpet cirka en vecka. Ska du frysa in äggulan tillsätt lite socker och vispa den lätt innan du fryser in den.
 
-                Maränger
+                    Äggvitor kan vispas upp till närmare åtta gånger sin egen volym.
 
-                30–35 små maränger: 3 stora äggvitor, 1 krm vinäger, 2 dl strösocker.
+                    Tillsats av syra som citronsaft, vinä­ger eller ättika påverkar pH-värdet och stärker äggvitan vid vispning. Tillsätt syran i början av vispningen. Om äggvitan är kall får den bättre volym än om den är rumstempererad.
 
-                Sätt ugnen på 100 grader. Vispa äggvitorna till vitt skum. Tillsätt vinägern och vispa ytterligare tills massan blivit mycket finporig. Vispa ner sockret lite i taget och vispa tills massan är styv och håller formen.
+                    Maränger
 
-                Klicka eller spritsa ut maränger, i storlek som pingisbollar på plåt med bakplåtspapper. Grädda dem 1–1 ½ timme, beroende på storlek. Tills de känns lätta och släpper papperet. Låt dem svalna på galler.
+                    30–35 små maränger: 3 stora äggvitor, 1 krm vinäger, 2 dl strösocker.
 
-                Chokladmaränger får man genom att försiktigt vända ner 75 gram fint hackad mörk choklad i den vispade marängen. Klicka eller spritsa ut på plåt med bakplåtspapper.
-            </p>
-                    <h3>
-                        Ett exempel på hur Fragilité kan se ut (all fancy n delicious-->
-                    </h3>
-        </article>
-        <aside>
-        <img src="Fragil%C3%A9OnTheRoll.img" alt="Så här kan Fragilité se ut"/>
-        </aside>
-        <footer>
-            <address>Daneil Saka, Ormängsgatan 61C, 165 56 Hässelby, tel.nr:0739161974, Email:danielsaka@hotmail.com</address>
-        </footer>
+                    Sätt ugnen på 100 grader. Vispa äggvitorna till vitt skum. Tillsätt vinägern och vispa ytterligare tills massan blivit mycket finporig. Vispa ner sockret lite i taget och vispa tills massan är styv och håller formen.
+
+                    Klicka eller spritsa ut maränger, i storlek som pingisbollar på plåt med bakplåtspapper. Grädda dem 1–1 ½ timme, beroende på storlek. Tills de känns lätta och släpper papperet. Låt dem svalna på galler.
+
+                    Chokladmaränger får man genom att försiktigt vända ner 75 gram fint hackad mörk choklad i den vispade marängen. Klicka eller spritsa ut på plåt med bakplåtspapper.
+                </p>
+                        <h3>
+                            Ett exempel på hur Fragilité kan se ut (all fancy n delicious-->
+                        </h3>
+            </article>
+            <aside>
+            <img src="Fragil%C3%A9OnTheRoll.img" alt="Så här kan Fragilité se ut"/>
+            </aside>
+            <footer class="frame7">
+                <address>Daniel Saka, Ormängsgatan 61C, 165 56 Hässelby, tel.nr:0739161974, Email:danielsaka@hotmail.com</address>
+            </footer>
+        </main>
     </body>
 </html>
