--- a/recept.html
+++ b/recept.html
@@ -3,55 +3,58 @@
     <head>
         <meta charset=utf-8>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="style.css">
         <title>Fragilité</title>
     </head>
      
     <body>
-        <header>
-            <h1>Bakning med chef Saka</h1>
-        </header>
-        <nav>
-            <a href="index.html">Start</a>
-            <a href="recept.html">Recept</a>
-        </nav>
-        <article>
-                    <ul type="square">
-                        <h3>Detta behöver du!</h3>
-                        <h4>Bottnar</h4>
-                        <li>190gr - Mandelmassa</li>
-                        <li>6st - Ägg</li>
-                        <li>3dl - Strösocker</li>
-                        <li>3msk - Mandelspån</li>
-                        <h4>Fyllnadskräm</h4>
-                        <li>100gr - Smör</li>
-                        <li>1dl - Florsocker</li>
-                        <li>1st - Ägg</li>
-                        <li>1/2dl - Päroncognac(mitt recept)</li>
-                        <li>50gr - Bär/Frukt (om du vill ersätta cognac)</li>
-                        <h4>Garnityr</h4>
-                        <li>Florsocker</li>
-                        <li>Hallon</li>
-                        <li>Chokladflarn</li>
-                        <li>Citronmeliss</li>
-                    </ul>    
-                    <ol>
-                        <h3>Hur du bakar din egen fragilité.</h3>
-                        <h4>Bottnar</h4>
-                        <li>Riv mandelmassan & blanda med mjölken</li>
-                        <li>Vispa äggvitor & socker till ett fast skum</li>
-                        <li>Spritsa eller bred ut smeten till runda 3 bottnar á 20cm</li>
-                        <li>Strö mandelspån på en av bottnarna</li>
-                        <li>Grädda i mitten av ugnen på 175gr i ca 10min</li>
-                        <h4>Smörkräm/fyllning</h4>
-                        <li>Rumstempererat vispar du nu samman samtliga ingredienser</li>
-                        <li>Fördela på 2 av bottnarna och toppa med mandelspånade delen</li>
-                        <li>Pudra över florsocker, lägg dit några hallon och chokladflarn</li>
-                        <li>Toppa till sist me ätbara blommor eller som i mitt fall citronmeliss</li>
-                        <p>Smaka å njut!</p>
-                    </ol>
-        </article>
-        <div>
-            <address>Daniel Saka, Ormängsgatan 61C, 165 56 Hässelby, tel.nr:0739161974, Email:danielsaka@hotmail.com</address>
-        </div>
+        <main>
+            <header>
+                <h1>Bakning med grande le chéf Careme</h1>
+            </header>
+            <nav>
+                <a href="index.html">Start</a>
+                <a href="recept.html">Recept</a>
+            </nav>
+            <article class="frame3">
+                        <ul type="square">
+                            <h3>Detta behöver du!</h3>
+                            <h4>Bottnar</h4>
+                            <li>190gr - Mandelmassa</li>
+                            <li>6st - Ägg</li>
+                            <li>3dl - Strösocker</li>
+                            <li>3msk - Mandelspån</li>
+                            <h4>Fyllnadskräm</h4>
+                            <li>100gr - Smör</li>
+                            <li>1dl - Florsocker</li>
+                            <li>1st - Ägg</li>
+                            <li>1/2dl - Päroncognac(mitt recept)</li>
+                            <li>50gr - Bär/Frukt (om du vill ersätta cognac)</li>
+                            <h4>Garnityr</h4>
+                            <li>Florsocker</li>
+                            <li>Hallon</li>
+                            <li>Chokladflarn</li>
+                            <li>Citronmeliss</li>
+                        </ul>    
+                        <ol>
+                            <h3>Hur du bakar din egen fragilité.</h3>
+                            <h4>Bottnar</h4>
+                            <li>Riv mandelmassan & blanda med mjölken</li>
+                            <li>Vispa äggvitor & socker till ett fast skum</li>
+                            <li>Spritsa eller bred ut smeten till runda 3 bottnar á 20cm</li>
+                            <li>Strö mandelspån på en av bottnarna</li>
+                            <li>Grädda i mitten av ugnen på 175gr i ca 10min</li>
+                            <h4>Smörkräm/fyllning</h4>
+                            <li>Rumstempererat vispar du nu samman samtliga ingredienser</li>
+                            <li>Fördela på 2 av bottnarna och toppa med mandelspånade delen</li>
+                            <li>Pudra över florsocker, lägg dit några hallon och chokladflarn</li>
+                            <li>Toppa till sist me ätbara blommor eller som i mitt fall citronmeliss</li>
+                            <p>Smaka å njut!</p>
+                        </ol>
+            </article>
+            <footer class="frame7">
+                <address>Daniel Saka, Ormängsgatan 61C, 165 56 Hässelby, tel.nr:0739161974, Email:danielsaka@hotmail.com</address>
+            </footer>
+        </main>    
     </body>
 </html>
