nu börjar det likna nåt

--- a/index.html
+++ b/index.html
@@ -7,18 +7,15 @@
         <title>Fragilité</title>
     </head>
     <body>
-        <main class="frame1">
-            <header class="fantasy">
-                <h1>Bakning med grande le chéf Careme</h1>
+        <main>
+            <header>
+                <h1>Från bageriet</h1>
             </header>
-            <nav>
+            <nav class="nav">
                 <a href="index.html">Start</a>
                 <a href="recept.html">Recept</a>
             </nav>
-            <section>
-
-            </section>    
-            <article class="frame2">
+            <article>
                   <h3>Fragilité och dess ursprung</h3>
                         <p>Marie-Antoine Carême, född 8 juni 1784 i Paris, död där 12 januari 1833, var en fransk kökskonstnär.
 
@@ -45,14 +42,8 @@
 
                     Chokladmaränger får man genom att försiktigt vända ner 75 gram fint hackad mörk choklad i den vispade marängen. Klicka eller spritsa ut på plåt med bakplåtspapper.
                 </p>
-                        <h3>
-                            Ett exempel på hur Fragilité kan se ut (all fancy n delicious-->
-                        </h3>
             </article>
-            <aside>
-            <img src="Fragil%C3%A9OnTheRoll.img" alt="Så här kan Fragilité se ut"/>
-            </aside>
-            <footer class="frame7">
+            <footer>
                 <address>Daniel Saka, Ormängsgatan 61C, 165 56 Hässelby, tel.nr:0739161974, Email:danielsaka@hotmail.com</address>
             </footer>
         </main>
