--- a/recept.html
+++ b/recept.html
@@ -10,13 +10,13 @@
     <body>
         <main>
             <header>
-                <h1>Bakning med grande le chéf Careme</h1>
+                <h1>Från bageriet</h1>
             </header>
             <nav>
                 <a href="index.html">Start</a>
                 <a href="recept.html">Recept</a>
             </nav>
-            <article class="frame3">
+            <article>
                         <ul type="square">
                             <h3>Detta behöver du!</h3>
                             <h4>Bottnar</h4>
@@ -52,7 +52,10 @@
                             <p>Smaka å njut!</p>
                         </ol>
             </article>
-            <footer class="frame7">
+            <aside>
+            Så här kan en Fragilité se ut när du är klar!
+            </aside>
+            <footer>
                 <address>Daniel Saka, Ormängsgatan 61C, 165 56 Hässelby, tel.nr:0739161974, Email:danielsaka@hotmail.com</address>
             </footer>
         </main>    
