this is much better
alot of fixes

--- a/recept.html
+++ b/recept.html
@@ -17,7 +17,7 @@
                 <a href="recept.html">Recept</a>
             </nav>
             <article>
-                        <ul type="square">
+                        <ul align="left">
                             <h3>Detta behöver du!</h3>
                             <h4>Bottnar</h4>
                             <li>190gr - Mandelmassa</li>
@@ -36,7 +36,7 @@
                             <li>Chokladflarn</li>
                             <li>Citronmeliss</li>
                         </ul>    
-                        <ol>
+                        <ol align="left">
                             <h3>Hur du bakar din egen fragilité.</h3>
                             <h4>Bottnar</h4>
                             <li>Riv mandelmassan & blanda med mjölken</li>
@@ -52,9 +52,6 @@
                             <p>Smaka å njut!</p>
                         </ol>
             </article>
-            <aside>
-            Så här kan en Fragilité se ut när du är klar!
-            </aside>
             <footer>
                 <address>Daniel Saka, Ormängsgatan 61C, 165 56 Hässelby, tel.nr:0739161974, Email:danielsaka@hotmail.com</address>
             </footer>
