--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             </nav>
             <article>
                   <h3>Fragilité och dess ursprung</h3>
-                        <p>Marie-Antoine Carême, född 8 juni 1784 i Paris, död där 12 januari 1833, var en fransk kökskonstnär.
+                        <p>Marie-Antoine Carême, född 8 juni 1784 i Paris, död där 12 januari 1833, var en fransk kökskonstnär.<br>
 
-                        Carême räknas som en av det franska kökets mest ryktbara företrädare. Han var kökschef hos bland andra Napoleon I, Charles Maurice de Talleyrand, prinsen-regenten Georg IV av Storbritannien, kejsare Alexander I av Ryssland och James Mayer de Rothschild. Hans namn har övergått till slagord för att beteckna höjdpunkten av kokkonst, av honom utvecklad till vetenskap.</p>
+                        Carême räknas som en av det franska kökets mest ryktbara företrädare. Han var kökschef hos bland andra Napoleon I, Charles Maurice de Talleyrand, prinsen-regenten Georg IV av Storbritannien, kejsare Alexander I av Ryssland och James Mayer de Rothschild. Hans namn har övergått till slagord för att beteckna höjdpunkten av kokkonst, av honom utvecklad till vetenskap.</p><img src="Fragil%C3%A9OnTheRoll.img">
 
                     <h3>Viktigt att veta när man gör maräng</h3>
-                    <p>Recept på klassisk maräng kommer ursprungligen från Meiringen i Schweiz där alla sägs älska marängsviss med chokladsås. Enligt en seglivad historia skapades bakverket maräng av en medeltida italiensk kock som bodde i staden. Maränger kan bakas på olika sätt, beroende på hur man ska använda dem. Vill man att de ska bli sega inuti görs de av en sjuden smet, torra maränger vispas kallt.
+                    <p>Recept på klassisk maräng kommer ursprungligen från Meiringen i Schweiz där alla sägs älska marängsviss med chokladsås. Enligt en seglivad historia skapades bakverket maräng av en medeltida italiensk kock som bodde i staden.<br> Maränger kan bakas på olika sätt, beroende på hur man ska använda dem. Vill man att de ska bli sega inuti görs de av en sjuden smet, torra maränger vispas kallt.<br>
 
                     – Det viktigaste är att ha rena kärl. Tvätta alltid ur bunken med två matskedar ättika och en tesked salt och skölj sedan med kallt vatten, säger den svenska konditorn Jan Hedh. Använd metallbunke, aldrig plastbunke.
 
@@ -32,15 +32,7 @@
 
                     Tillsats av syra som citronsaft, vinä­ger eller ättika påverkar pH-värdet och stärker äggvitan vid vispning. Tillsätt syran i början av vispningen. Om äggvitan är kall får den bättre volym än om den är rumstempererad.
 
-                    Maränger
-
-                    30–35 små maränger: 3 stora äggvitor, 1 krm vinäger, 2 dl strösocker.
-
-                    Sätt ugnen på 100 grader. Vispa äggvitorna till vitt skum. Tillsätt vinägern och vispa ytterligare tills massan blivit mycket finporig. Vispa ner sockret lite i taget och vispa tills massan är styv och håller formen.
-
-                    Klicka eller spritsa ut maränger, i storlek som pingisbollar på plåt med bakplåtspapper. Grädda dem 1–1 ½ timme, beroende på storlek. Tills de känns lätta och släpper papperet. Låt dem svalna på galler.
-
-                    Chokladmaränger får man genom att försiktigt vända ner 75 gram fint hackad mörk choklad i den vispade marängen. Klicka eller spritsa ut på plåt med bakplåtspapper.
+                   
                 </p>
             </article>
             <footer>
