--- a/index.html
+++ b/index.html
@@ -1,43 +1,32 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset=utf-8>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <title>Fragilité</title>
-    </head>
-    <body>
-        <main>
-            <header>
-                <h1>Från bageriet</h1>
-            </header>
-            <nav class="nav">
-                <a href="index.html">Start</a>
-                <a href="recept.html">Recept</a>
-            </nav>
-            <article>
-                  <h3>Fragilité och dess ursprung</h3>
-                        <p>Marie-Antoine Carême, född 8 juni 1784 i Paris, död där 12 januari 1833, var en fransk kökskonstnär.<br>
-
-                        Carême räknas som en av det franska kökets mest ryktbara företrädare. Han var kökschef hos bland andra Napoleon I, Charles Maurice de Talleyrand, prinsen-regenten Georg IV av Storbritannien, kejsare Alexander I av Ryssland och James Mayer de Rothschild. Hans namn har övergått till slagord för att beteckna höjdpunkten av kokkonst, av honom utvecklad till vetenskap.</p><img src="Fragil%C3%A9OnTheRoll.img">
-
-                    <h3>Viktigt att veta när man gör maräng</h3>
-                    <p>Recept på klassisk maräng kommer ursprungligen från Meiringen i Schweiz där alla sägs älska marängsviss med chokladsås. Enligt en seglivad historia skapades bakverket maräng av en medeltida italiensk kock som bodde i staden.<br> Maränger kan bakas på olika sätt, beroende på hur man ska använda dem. Vill man att de ska bli sega inuti görs de av en sjuden smet, torra maränger vispas kallt.<br>
-
-                    – Det viktigaste är att ha rena kärl. Tvätta alltid ur bunken med två matskedar ättika och en tesked salt och skölj sedan med kallt vatten, säger den svenska konditorn Jan Hedh. Använd metallbunke, aldrig plastbunke.
-
-                    Var noga med att separerar ägg­gulan från äggvitan så att inga så kallade guldfiskar blir kvar i äggvitan. Äggulan innehåller fett vilket dämpar skumbildningen. Bäst resultat får du om äggvitan har stått och luftat sig i kylen ett par dagar. Äggvitan går bra att frysa som den är, men håller sig i kylskåpet cirka en vecka. Ska du frysa in äggulan tillsätt lite socker och vispa den lätt innan du fryser in den.
-
-                    Äggvitor kan vispas upp till närmare åtta gånger sin egen volym.
-
-                    Tillsats av syra som citronsaft, vinä­ger eller ättika påverkar pH-värdet och stärker äggvitan vid vispning. Tillsätt syran i början av vispningen. Om äggvitan är kall får den bättre volym än om den är rumstempererad.
-
-                   
-                </p>
-            </article>
-            <footer>
-                <address>Daniel Saka, Ormängsgatan 61C, 165 56 Hässelby, tel.nr:0739161974, Email:danielsaka@hotmail.com</address>
-            </footer>
+<head>
+    <meta charset="UTF-8">
+    <title>Fragilité</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+    <div id="main-wrapper">
+        <header>
+            <h1>B<span>a</span>ka*</h1>
+        </header>
+        <nav>
+            <ul>
+                <li><a href="information.html">Information</a></li>
+                <li><a href="recept.html">Recept</a></li>
+            </ul>
+        </nav>
+        <main>            
         </main>
-    </body>
+        <footer>
+            <address>
+                Daniel Saka | Telefon: 073 - 916 19 74 | Email: <a href="mailto:danielsaka@hotmail.com">danielsaka@hotmail.com</a>
+            </address>
+        </footer>
+    </div>
+    <script type="text/javascript" src="jquery-2.2.0.min.js"></script>
+    <script type="text/javascript" src="script.js"></script>
+</body>
+</html>
 </html>
