--- a/recept.html
+++ b/recept.html
@@ -52,6 +52,10 @@
             </ol>
             <p>Smaka å njut!</p>
         </section>
+        <aside><input type="range" min="2" max="12" value="4" step="2" onchange="showValue(this.value)"/><span id="range">4</span><script type="text/javascript">
+            function showValue(newValue){
+                document.getElementById("range").innerHTML=newValue;
+            }</script></aside>
     </article>
     <a href="index.html">Hem</a>
     </div>
