rating and recipe slidebar

--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
             </ul>
         </nav>
         <main>            
+            <div id="content"></div>
+            <div id="rating">
+            <div id="rating-top"><ul id ="rating-input" class="c-rating">
+                </ul>
+                </div>
+                <div id rating-bottom>
+                <span id="var-star">0</span>
+                <div class="img-person"></div>
+                </div>
+            </div>
         </main>
         <footer>
             <address>
@@ -27,6 +37,6 @@
     </div>
     <script type="text/javascript" src="jquery-2.2.0.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="rating.min.js"></script>
 </body>
-</html>
 </html>
