last update fix

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
     <title>Fragilité</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/rating.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 <body>
     <div id="main-wrapper">
         <header>
-            <h1>B<span>a</span>ka*</h1>
+            <h1>Mu<span>m</span>s*</h1>
         </header>
         <nav>
             <ul>
@@ -17,17 +17,19 @@
                 <li><a href="recept.html">Recept</a></li>
             </ul>
         </nav>
-        <main>            
-            <div id="content"></div>
-            <div id="rating">
-            <div id="rating-top"><ul id ="rating-input" class="c-rating">
-                </ul>
-                </div>
-                <div id rating-bottom>
-                <span id="var-star">0</span>
-                <div class="img-person"></div>
-                </div>
+        <main>
+          <div id="content"></div>
+          <div id="rating">
+            <div id="rating-top">
+              <ul id="rating-input" class="c-rating"></ul>
             </div>
+            <div id="rating-bottom">
+              <span id="var-star">0</span>
+              <div class="img-star"></div>&nbsp;
+              <span id="var-person">0</span>
+              <div class="img-person"></div>
+            </div>
+          </div>
         </main>
         <footer>
             <address>
@@ -35,8 +37,8 @@
             </address>
         </footer>
     </div>
-    <script type="text/javascript" src="jquery-2.2.0.min.js"></script>
-    <script type="text/javascript" src="script.js"></script>
-    <script type="text/javascript" src="rating.min.js"></script>
+    <script type="text/javascript" src="js/jquery-2.2.0.min.js"></script>
+    <script type="text/javascript" src="js/rating.min.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
