--- a/information.html
+++ b/information.html
@@ -7,7 +7,7 @@
 <body>
     <div id="main-wrapper">
     <article>
-        
+
         <h3>Fragilité och dess ursprung</h3>
         <p>Marie-Antoine Carême, född 8 juni 1784 i Paris, död där 12 januari 1833, var en fransk kökskonstnär. Carême räknas som en av det franska kökets mest ryktbara företrädare. Han var kökschef hos bland andra Napoleon I, Charles Maurice de Talleyrand, prinsen-regenten Georg IV av Storbritannien, kejsare Alexander I av Ryssland och James Mayer de Rothschild. Hans namn har övergått till slagord för att beteckna höjdpunkten av kokkonst, av honom utvecklad till vetenskap.</p>
 
@@ -19,7 +19,7 @@
         <p>Tillsats av syra som citronsaft, vinä­ger eller ättika påverkar pH-värdet och stärker äggvitan vid vispning. Tillsätt syran i början av vispningen. Om äggvitan är kall får den bättre volym än om den är rumstempererad.</p>
 
         <figure>
-            <img src="Frag.jpg" alt="Så här kan Fragilité se ut" />
+            <img src="img/Frag.jpg" alt="Så här kan Fragilité se ut" />
             <figcaption>Så här kan den se ut.</figcaption>
         </figure>
 
@@ -28,7 +28,7 @@
         <p>Sätt ugnen på 100 grader. Vispa äggvitorna till vitt skum. Tillsätt vinägern och vispa ytterligare tills massan blivit mycket finporig. Vispa ner sockret lite i taget och vispa tills massan är styv och håller formen.</p>
         <p>Klicka eller spritsa ut maränger, i storlek som pingisbollar på plåt med bakplåtspapper. Grädda dem 1–1 ½ timme, beroende på storlek. Tills de känns lätta och släpper papperet. Låt dem svalna på galler.</p>
         <p>Chokladmaränger får man genom att försiktigt vända ner 75 gram fint hackad mörk choklad i den vispade marängen. Klicka eller spritsa ut på plåt med bakplåtspapper.</p>
-  
+
     </article>
     <a href="index.html">Hem</a>
     </div>
