--- a/recept.html
+++ b/recept.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <meta charset=utf-8>
-    meta
     <title>Recept</title>
     </head>
 <body>
@@ -33,10 +32,10 @@
                 <li>Citronmeliss</li>
             </ul>
             <div>
-            <p><span id="portion">1</span>&nbsp;portioner</p>
-              <input id="portion-slider" type="range" min="1" max="12" step="2" value="4" oninput="updatePortion(value)"/>
+              <p><span id="portien">1</span>&nbsp;portioner</p>
+              <input id="portien-slider" type="range" min="1" max="10" step="1" value="1" oninput="updatePortion(value)"/>
             </div>
-        </section>    
+        </section>
         <section>
             <h3>Hur du bakar din egen fragilité.</h3>
             <h4>Bottnar</h4>
